--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
                 android:layout_marginTop="200dp"
                 android:layout_marginLeft="155dp"
                 android:text="Stevania Bere"
+                android:theme="@style/AppTheme"
                 android:textStyle="bold"
                 android:textSize="20sp">
             </TextView>
